--- a/projetos.html
+++ b/projetos.html
@@ -51,9 +51,9 @@
     </div>
 
     <div class="project-card">
-      <h2></h2>
-      <p></p>
-      <a herf="">Ver mais</a>
+      <h2>Boa Massa</h2>
+      <p>Umas das melhores pizzas que você já comeu.</p>
+      <a herf="https://maria-off.github.io/Pizzaria/index.html">Ver mais</a>
     </div>
 
      <div class="project-card">
@@ -80,4 +80,5 @@
   </footer>
 </body>
 </html>
+
 
