--- a/projetos.html
+++ b/projetos.html
@@ -63,9 +63,9 @@
     </div>
 
      <div class="project-card">
-      <h2></h2>
-      <p></p>
-      <a herf="">Ver mais</a>
+      <h2>Barbearia Alura</h2>
+      <p>o melhor lugar para você cortar e arrumar seu cabelo e barba</p>
+      <a herf="https://maria-off.github.io/Barbearia-Alura/contatos.html">Ver mais</a>
     </div>
 
      <div class="project-card">
@@ -80,6 +80,7 @@
   </footer>
 </body>
 </html>
+
 
 
 
