--- a/projetos.html
+++ b/projetos.html
@@ -73,6 +73,24 @@
       <p></p>
       <a herf="">Ver mais</a>
     </div>
+
+    <div class="project-card">
+      <h2></h2>
+      <p></p>
+      <a herf="">Ver mais</a>
+    </div>
+
+    <div class="project-card">
+      <h2></h2>
+      <p></p>
+      <a herf="">Ver mais</a>
+    </div>
+
+    <div class="project-card">
+      <h2></h2>
+      <p></p>
+      <a herf="">Ver mais</a>
+    </div>
   </section>
 
   <footer>
@@ -80,6 +98,7 @@
   </footer>
 </body>
 </html>
+
 
 
 
