--- a/index.html
+++ b/index.html
@@ -20,12 +20,15 @@
 
   <section id="projetos" class="projects">
     <div class="project-card">
-      <h2>Projeto 1</h2>
-      <p>Descrição do projeto aqui...</p>
+      <h2></h2>
+      <p></p>
+      <a herf="">Ver mais</a>
     </div>
-    <div class="project-card">
-      <h2>Projeto 2</h2>
-      <p>Descrição do projeto aqui...</p>
+
+     <div class="project-card">
+      <h2></h2>
+      <p></p>
+      <a herf="">Ver mais</a>
     </div>
     <!-- Adicione mais projetos -->
   </section>
@@ -35,3 +38,4 @@
   </footer>
 </body>
 </html>
+
