--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
 
   <section id="projetos" class="projects">
     <div class="project-card">
-      <h2></h2>
-      <p></p>
-      <a herf="">Ver mais</a>
+      <h2>Café Encnto</h2>
+      <p>Os melhores café e diferenciado</p>
+      <a herf="https://maria-off.github.io/Cafeteria/index.html">Ver mais</a>
     </div>
 
      <div class="project-card">
@@ -38,4 +38,5 @@
   </footer>
 </body>
 </html>
+
 
