--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
   <section id="projetos" class="projects">
     <div class="project-card">
-      <h2>Café Encnto</h2>
+      <h2>Café Encanto</h2>
       <p>Os melhores cafés e diferenciados</p>
       <a herf="https://maria-off.github.io/Cafeteria/index.html">Ver mais</a>
     </div>
@@ -38,6 +38,7 @@
   </footer>
 </body>
 </html>
+
 
 
 
