--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
     </div>
 
      <div class="project-card">
-      <h2></h2>
-      <p></p>
-      <a herf="">Ver mais</a>
+      <h2>Locadora VrumVrum</h2>
+      <p>A melhor locadora que você pode ter para cuidar e gerenciar seus automoveis</p>
+      <a herf="https://maria-off.github.io/Locadora/index.html">Ver mais</a>
     </div>
     <!-- Adicione mais projetos -->
   </section>
@@ -38,6 +38,7 @@
   </footer>
 </body>
 </html>
+
 
 
 
