--- a/projetos.html
+++ b/projetos.html
@@ -76,7 +76,7 @@
 
     <div class="project-card">
       <h2>Transportadora</h2>
-      <p>confiança e respeito nos chegamos longe</p>
+      <p>confiança e respeito nos chegamos longe.</p>
       <a herf="https://maria-off.github.io/Transportadora/sobre.html">Ver mais</a>
     </div>
   </section>
@@ -86,6 +86,7 @@
   </footer>
 </body>
 </html>
+
 
 
 
